--- a/index.html
+++ b/index.html
@@ -7,10 +7,60 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <!-- Custom CSS for Project -->
     <link rel="stylesheet" href="styles/main.css">
-
-    <title></title>
+    <title>Bootstrap and JS/jQuery Worksheet</title>
   </head>
+
   <body>
+    <div class="container">
+      <p>Bootstrap and JS/jQuery Worksheet</p>
+      <h1>Week 3 Class Work</h1>
+
+      <!-- Box Row (.boxRow) -->
+      <div class="row boxRow">
+        <div class="col box" id="box01">
+          <!-- #box01 -->
+        </div>
+        <div class="col box" id="box02">
+          <!-- #box02 -->
+        </div>
+        <div class="col box" id="box03">
+          <!-- #box03 -->
+        </div>
+      </div>
+
+      
+      <!-- Change Box Buttons (.changeBox) -->
+      <div class="row changeBox">
+        <div class="col changebox01">
+          One of three columns
+        </div>
+        <div class="col changebox02">
+          One of three columns
+        </div>
+        <div class="col changebox03">
+          One of three columns
+        </div>
+        <div class="col changeAll">
+          One of three columns
+        </div>
+      </div>
+
+      <!-- Hide Box Buttons (.hideBox) -->
+      <div class="row hideBox">
+        <div class="col hidebox01">
+          One of three columns
+        </div>
+        <div class="col hidebox02">
+          One of three columns
+        </div>
+        <div class="col hidebox03">
+          One of three columns
+        </div>
+        <div class="col hideAll">
+          One of three columns
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
