Add styles to `index.html` `.btn`s

--- a/index.html
+++ b/index.html
@@ -28,36 +28,57 @@
         </div>
       </div>
 
-      
       <!-- Change Box Buttons (.changeBox) -->
+      <div class="row">
+        <div class="col col-12">
+          <h2>Change Buttons</h2>
+        </div>
+      </div>
       <div class="row changeBox">
-        <div class="col changebox01">
-          One of three columns
+        <div class="col col-3" id="changebox01">
+          <p class="btn change">Change Box 1</p>
         </div>
-        <div class="col changebox02">
-          One of three columns
+        <div class="col col-3" id="changebox02">
+          <p class="btn change">Change Box 2</p>
         </div>
-        <div class="col changebox03">
-          One of three columns
+        <div class="col col-3" id="changebox03">
+          <p class="btn change">Change Box 3</p>
         </div>
-        <div class="col changeAll">
-          One of three columns
+        <div class="col col-3" id="changeAll">
+          <p class="btn change">Change All</p>
         </div>
       </div>
 
       <!-- Hide Box Buttons (.hideBox) -->
-      <div class="row hideBox">
-        <div class="col hidebox01">
-          One of three columns
+      <div class="row">
+        <div class="col col-12">
+          <h3>Hide Buttons</h3>
         </div>
-        <div class="col hidebox02">
-          One of three columns
+      </div>
+      <div class="row changeBox">
+        <div class="col col-3" id="hidebox01">
+          <p class="btn change">Hide Box 1</p>
         </div>
-        <div class="col hidebox03">
-          One of three columns
+        <div class="col col-3" id="hidebox02">
+          <p class="btn change">Hide Box 2</p>
         </div>
-        <div class="col hideAll">
-          One of three columns
+        <div class="col col-3" id="hidebox03">
+          <p class="btn change">Hide Box 3</p>
+        </div>
+        <div class="col col-3" id="changeAll">
+          <p class="btn change">Hide All</p>
+        </div>
+      </div>
+
+      <!-- Reset Button Row -->
+      <div class="row changeBox">
+        <div class="col col-3" id="resetColors">
+          <p class="btn resetColors">Reset Colors</p>
+        </div>
+        <div class="col col-6 hide">
+        </div>
+        <div class="col col-3" id="showAll">
+          <p class="btn showAll">Show All</p>
         </div>
       </div>
     </div>
